examples/test/testpolicy1059.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1059
  namespace: namespace450
spec:
  podSelector:
    matchLabels:
      key26: value5
      key3: value12
      key29: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value41
          key3: value19
      podSelector:
        matchLabels:
          key19: value10
          key37: value37
